idk whats happening

--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@firebase/firestore": "^4.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@parse/react": "^0.0.1-alpha.18",
+    "@react-google-maps/api": "^2.19.2",
     "clsx": "^2.0.0",
     "D": "^1.0.0",
     "firebase": "^10.5.0",
+    "html-react-parser": "^5.0.3",
+    "parse": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
