--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "D": "^1.0.0",
     "firebase": "^10.5.0",
     "html-react-parser": "^5.0.3",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "parse": "^2.10.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
