--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.15",
     "@parse/react": "^0.0.1-alpha.18",
     "@react-google-maps/api": "^2.19.2",
+    "bootstrap": "^5.3.2",
     "clsx": "^2.0.0",
     "D": "^1.0.0",
     "firebase": "^10.5.0",
@@ -31,7 +32,9 @@
     "parse": "^2.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
